# claude-acp-harness

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.agents/: session.json
.agents/skills/swain-design/scripts/: chart_cli.py  migrate-frontmatter-fields.py  migrate-lifecycle-dirs.py
.agents/skills/swain-do/scripts/: ingest-plan.py
.agents/skills/swain-release/scripts/: render_changelog.py
.agents/skills/swain-release/tests/: test_render_changelog.py
.agents/skills/swain-search/scripts/: export-snapshot.sh  log-snapshot-metadata.sh  verify-snapshot-evidence.sh
.agents/skills/swain-security-check/scripts/: context_file_scanner.py  external_hooks.py  scanner_availability.py  security_briefing.py  security_check.py  security_gate.py  threat_surface.py
config/: harness.yaml
docs/adr/Active/: (ADR-001)-tmux-as-session-substrate.md  (ADR-002)-Sentinel-based-end-of-response-detection.md  (ADR-003)-Subscription-OAuth-as-default-auth-path.md
docs/epic/Active/(EPIC-001)-Session-Manager/: (EPIC-001)-Session-Manager.md
docs/epic/Active/(EPIC-002)-ACP-Protocol-Layer/: (EPIC-002)-ACP-Protocol-Layer.md
docs/epic/Active/(EPIC-003)-Automation-and-Verification/: (EPIC-003)-Automation-and-Verification.md
docs/initiative/Active/(INITIATIVE-001)-Subscription-Backed-ACP-Layer/: (INITIATIVE-001)-Subscription-Backed-ACP-Layer.md
docs/persona/Active/(PERSONA-001)-Subscription-Developer/: (PERSONA-001)-Subscription-Developer.md
docs/persona/Active/(PERSONA-002)-Automation-Operator/: (PERSONA-002)-Automation-Operator.md
docs/spec/Active/(SPEC-001)-Claude-Session-Lifecycle/: (SPEC-001)-Claude-Session-Lifecycle.md
docs/spec/Active/(SPEC-002)-SCP-Protocol-Server/: (SPEC-002)-SCP-Protocol-Server.md
docs/spec/Active/(SPEC-003)-Command-Router/: (SPEC-003)-Command-Router.md
docs/spec/Active/(SPEC-004)-Session-Pool-Manager/: (SPEC-004)-Session-Pool-Manager.md
docs/spec/Active/(SPEC-005)-Verification-Loop/: (SPEC-005)-Verification-Loop.md
docs/spec/Active/(SPEC-006)-ACP-REST-API/: (SPEC-006)-ACP-REST-API.md
docs/troves/ai-agent-session-pricing/: manifest.yaml  synthesis.md
scripts/: benchmark.py  cleanup.py  demo.py
src/: acp_harness.py  acp_protocol.py  command_router.py  config.py  direct_executor.py  observability.py  rest_api.py  session_lifecycle.py  session_pool.py  verification_loop.py
tests/: test_acp_harness.py
(+51 files in other folders)
