[project]
name = "claude-acp-harness"
version = "0.1.0"
description = "ACP Harness for Claude Code with tmux I/O management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.scripts]
claude-harness = "src.acp_harness:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
